<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_settlement_expenses_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/layout_cardview"
        android:layout_marginBottom="20dp"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_start_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_end_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_tpnum_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.70" />

        <ImageView
            android:id="@+id/image_green_dot"
            android:layout_width="8dp"
            android:layout_height="8dp"
            app:srcCompat="@drawable/green_button_background"
            card_view:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_start_second"
            card_view:layout_constraintTop_toTopOf="@id/text_expenses_type_name"
            card_view:layout_constraintBottom_toBottomOf="@id/text_expenses_type_name"/>

        <TextView
            android:id="@+id/text_expenses_type_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Ksatriya Anantayutya"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/guideline_vertical_parent_start_second"
            style="@style/TextBold"/>

        <TextView
            android:id="@+id/text_expenses_type_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/spent"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end_second"/>

        <TextView
            android:id="@+id/text_expenses_type_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="USD 100"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            card_view:layout_constraintTop_toBottomOf="@id/text_expenses_type_type"
            card_view:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end_second"
            android:layout_marginEnd="5dp"
            style="@style/TextBold"/>

        <TextView
            android:id="@+id/text_expenses_type_allocated_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/allocated"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            card_view:layout_constraintTop_toBottomOf="@id/text_expenses_type_total"
            card_view:layout_constraintLeft_toLeftOf="@id/text_expenses_type_name"
            card_view:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_usd"/>

        <TextView
            android:id="@+id/text_expenses_type_allocated_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="USD 200"
            android:textSize="12sp"
            card_view:layout_constraintTop_toTopOf="@id/text_expenses_type_allocated_title"
            card_view:layout_constraintLeft_toRightOf="@id/guideline_vertical_parent_usd"
            style="@style/TextBold"/>

        <TextView
            android:id="@+id/text_expenses_type_balance_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            card_view:layout_constraintTop_toBottomOf="@id/text_expenses_type_allocated_title"
            card_view:layout_constraintLeft_toLeftOf="@id/text_expenses_type_name"
            card_view:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_usd"/>

        <TextView
            android:id="@+id/text_expenses_type_balance_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="USD 200"
            android:textSize="12sp"
            card_view:layout_constraintTop_toTopOf="@id/text_expenses_type_balance_title"
            card_view:layout_constraintLeft_toRightOf="@id/guideline_vertical_parent_usd"
            style="@style/TextBold"/>

        <Button
            android:id="@+id/btn_view_receipt"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/view_receipt"
            android:background="@drawable/custom_button_primary_button2"
            android:textColor="@color/white"
            android:textSize="12sp"
            card_view:layout_constraintTop_toBottomOf="@id/text_expenses_type_allocated_title"
            card_view:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end_second"
            android:layout_marginEnd="5dp"
            android:visibility="visible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            card_view:layout_constraintLeft_toLeftOf="@id/text_expenses_type_name"
            card_view:layout_constraintRight_toRightOf="@id/btn_view_receipt"
            card_view:layout_constraintTop_toBottomOf="@id/btn_view_receipt"
            android:layout_marginTop="10dp"
            android:background="@color/button_disabled"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>