<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.Proposal.Approver.ProposalApproverMain"
    tools:showIn="@layout/pa_activity_approver_main">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <!-- End of actionbar section, beginning of top bar section -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_checked_all"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_floating_bar_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.74" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_start_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_parent_end_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_mid_plus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_tpnum_mid_minus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/select_all_inquiry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_all_travel_inquiries"
            app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_parent_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/open_bracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/open_bracket"
            app:layout_constraintLeft_toRightOf="@id/select_all_inquiry_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/total_number_of_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="0"
            app:layout_constraintLeft_toRightOf="@id/open_bracket"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/close_bracket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/close_bracket"
            app:layout_constraintLeft_toRightOf="@id/total_number_of_request"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <CheckBox
            android:id="@+id/checkbox_select_all"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/custom_checkbox_main"
            android:button="@android:color/transparent"
            android:layout_gravity="center_vertical"
            app:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- End of top bar section, beginning of Scrollview section -->

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_checked_all"
        app:layout_constraintBottom_toTopOf="@id/outer_layout_call_to_action_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.omega_r.libs.omegarecyclerview.OmegaRecyclerView
            android:id="@+id/recyclerview_list_trip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:paginationLayout="@layout/item_pagination_progress"
            app:paginationErrorLayout="@layout/item_pagination_error_loading"
            />
        <!--            android:divider="#888"-->
        <!--            android:dividerHeight="1dp"-->
        <!--            app:dividerShow="middle"-->

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- End of Scrollview section, beginning of bottom bar section -->

    <LinearLayout
        android:id="@+id/outer_layout_call_to_action_button"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/swipe_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="20dp"
        android:background="@drawable/custom_floating_bottom_bar_background">

        <LinearLayout
            android:id="@+id/layout_call_to_action_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_call_to_action_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reject"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_secondary_button_full"
                android:layout_gravity="center_vertical"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_call_to_action_approve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/approve"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_primary_button"
                android:layout_gravity="center_vertical"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>