<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Proposal.MyProposalFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_parent_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_parent_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_parent_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_parent_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_parent_start_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_parent_end_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_mid_plus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_tpnum_mid_minus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <!-- Button create new proposal -->

<!--    <ImageButton-->
<!--        android:id="@+id/button_add_travel_proposal"-->
<!--        android:layout_width="58dp"-->
<!--        android:layout_height="58dp"-->
<!--        android:background="@drawable/custom_button_secondary_button"-->
<!--        android:src="@drawable/ic_add_travel_primary_24dp"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:elevation="5dp"-->
<!--        android:scaleType="fitCenter"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline_horizontal_parent_start"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_parent_start"/>-->

<!--    <TextView-->
<!--        android:id="@+id/button_add_travel_text"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/create_new_proposal"-->
<!--        android:textSize="14sp"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        app:layout_constraintLeft_toRightOf="@id/button_add_travel_proposal"-->
<!--        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_parent_start"-->
<!--        app:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end"/>-->

    <!-- Button list proposal approval -->

    <ImageButton
        android:id="@+id/button_list_travel_approval"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/custom_button_secondary_button"
        android:src="@drawable/ic_my_proposal_primary_24dp"
        android:adjustViewBounds="true"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_parent_start"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_parent_start"/>

    <TextView
        android:id="@+id/button_list_travel_approval_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_travel"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/button_list_travel_approval"
        app:layout_constraintTop_toTopOf="@id/button_list_travel_approval"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end"/>

    <TextView
        android:id="@+id/button_list_travel_approval_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pending_approval_text"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/button_list_travel_approval"
        app:layout_constraintTop_toBottomOf="@id/button_list_travel_approval_text"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end"/>

    <!-- Button list history approval -->

    <ImageButton
        android:id="@+id/button_list_travel_history"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/custom_button_secondary_button"
        android:src="@drawable/ic_proposal_approval_primary_24dp"
        android:adjustViewBounds="true"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/button_list_travel_approval"
        app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_parent_start"/>

    <TextView
        android:id="@+id/button_list_travel_history_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/travel_approval"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/button_list_travel_history"
        app:layout_constraintTop_toTopOf="@id/button_list_travel_history"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end"/>

    <TextView
        android:id="@+id/button_list_travel_history_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/approval_description"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/button_list_travel_history"
        app:layout_constraintTop_toBottomOf="@id/button_list_travel_history_text"
        app:layout_constraintRight_toRightOf="@id/guideline_vertical_parent_end"/>

</androidx.constraintlayout.widget.ConstraintLayout>